--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -161,7 +161,14 @@
         box-shadow: none;
     }
 
-    // default
+    // align
+    &.vp-filter__align-left {
+        justify-content: flex-start;
+    }
+    &.vp-filter__align-right {
+        justify-content: flex-end;
+    }
+
     .vp-filter__item {
         flex: 0 0 auto;
         list-style-type: none;
@@ -215,7 +222,14 @@
         box-shadow: none;
     }
 
-    // default
+    // align
+    &.vp-pagination__align-left {
+        justify-content: flex-start;
+    }
+    &.vp-pagination__align-right {
+        justify-content: flex-end;
+    }
+
     .vp-pagination__item {
         flex: 0 0 auto;
         list-style-type: none;
