--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -3,7 +3,7 @@
     margin-bottom: 40px;
 }
 .vp-portfolio,
-.vp-portfolio__wrap {
+.vp-portfolio__items {
     position: relative;
     overflow: hidden;
 }
@@ -11,18 +11,24 @@
 .vp-portfolio * {
     box-sizing: border-box;
 }
-.vp-portfolio__wrap {
+.vp-portfolio__items {
     transition: 0.5s height ease-in-out;
 }
 
 .vp-portfolio:after,
-.vp-portfolio__wrap:after {
+.vp-portfolio__items:after {
     content: '';
     display: block;
     clear: both;
 }
 
+.vp-portfolio__item-wrap {
+    position: relative;
+    overflow: hidden;
+}
+
 .vp-portfolio__item {
+    position: relative;
     width: 33.333%;
     float: left;
     opacity: 0;
@@ -34,10 +40,6 @@
     display: block;
     width: 100%;
     height: auto;
-}
-
-.vp-portfolio__item-overlay {
-    display: none;
 }
 
 // Preloader
@@ -137,6 +139,210 @@
         opacity: 0;
         visibility: hidden;
         animation: none;
+    }
+}
+
+
+// Items Default Style
+.vp-portfolio__items-style-default {
+    .vp-portfolio__item-meta {
+        padding: 10px 15px;
+
+        * + * {
+            margin-top: 4px;
+        }
+
+        .nk-portfolio__item-meta-title {
+            font-weight: 500;
+            font-size: 16px !important;
+            padding: 0 !important;
+
+            a {
+                color: inherit;
+                text-decoration: none;
+
+                &:hover {
+                    color: #0082b7;
+                }
+            }
+        }
+        .vp-portfolio__item-meta-date {
+            font-size: 12px;
+        }
+    }
+
+    // align
+    .vp-portfolio__item-align-left {
+        text-align: left;
+    }
+    .vp-portfolio__item-align-center {
+        text-align: center;
+    }
+    .vp-portfolio__item-align-right {
+        text-align: right;
+    }
+}
+
+
+// Items Fly Style
+.vp-portfolio__items-style-fly {
+    .vp-portfolio__item-overlay {
+        position: absolute;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        text-decoration: none;
+        background-color: #212125;
+        transform: translateY(-100%) translateX(-100%);
+        color: #fff;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        padding: 20px;
+    }
+    .vp-portfolio__item-meta {
+        * + * {
+            margin-top: 4px;
+        }
+
+        .nk-portfolio__item-meta-title {
+            color: inherit;
+            font-weight: 500;
+            font-size: 16px !important;
+            padding: 0 !important;
+        }
+        .vp-portfolio__item-meta-date {
+            font-size: 12px;
+        }
+    }
+
+    // align
+    .vp-portfolio__item-align-left {
+        justify-content: flex-start;
+        text-align: left;
+    }
+    .vp-portfolio__item-align-right {
+        justify-content: flex-end;
+        text-align: right;
+    }
+
+    .vp-portfolio__item-align-top-center {
+        justify-content: center;
+        align-items: flex-start;
+        text-align: center;
+    }
+    .vp-portfolio__item-align-top-left {
+        justify-content: flex-start;
+        align-items: flex-start;
+        text-align: left;
+    }
+    .vp-portfolio__item-align-top-right {
+        justify-content: flex-end;
+        align-items: flex-start;
+        text-align: right;
+    }
+
+    .vp-portfolio__item-align-bottom-center {
+        justify-content: center;
+        align-items: flex-end;
+        text-align: center;
+    }
+    .vp-portfolio__item-align-bottom-left {
+        justify-content: flex-start;
+        align-items: flex-end;
+        text-align: left;
+    }
+    .vp-portfolio__item-align-bottom-right {
+        justify-content: flex-end;
+        align-items: flex-end;
+        text-align: right;
+    }
+}
+
+
+// Items Fade Style
+.vp-portfolio__items-style-fade {
+    .vp-portfolio__item-overlay {
+        position: absolute;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        text-decoration: none;
+        background-color: rgba(0, 0, 0, 0.85);
+        color: #fff;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        padding: 20px;
+        opacity: 0;
+        transition: .3s opacity;
+    }
+    & .vp-portfolio__item-wrap:hover .vp-portfolio__item-overlay {
+        opacity: 1;
+    }
+
+    .vp-portfolio__item-meta {
+        * + * {
+            margin-top: 4px;
+        }
+
+        .nk-portfolio__item-meta-title {
+            color: inherit;
+            font-weight: 500;
+            font-size: 16px !important;
+            padding: 0 !important;
+        }
+        .vp-portfolio__item-meta-date {
+            font-size: 12px;
+        }
+    }
+
+    // align
+    .vp-portfolio__item-align-left {
+        justify-content: flex-start;
+        text-align: left;
+    }
+    .vp-portfolio__item-align-right {
+        justify-content: flex-end;
+        text-align: right;
+    }
+
+    .vp-portfolio__item-align-top-center {
+        justify-content: center;
+        align-items: flex-start;
+        text-align: center;
+    }
+    .vp-portfolio__item-align-top-left {
+        justify-content: flex-start;
+        align-items: flex-start;
+        text-align: left;
+    }
+    .vp-portfolio__item-align-top-right {
+        justify-content: flex-end;
+        align-items: flex-start;
+        text-align: right;
+    }
+
+    .vp-portfolio__item-align-bottom-center {
+        justify-content: center;
+        align-items: flex-end;
+        text-align: center;
+    }
+    .vp-portfolio__item-align-bottom-left {
+        justify-content: flex-start;
+        align-items: flex-end;
+        text-align: left;
+    }
+    .vp-portfolio__item-align-bottom-right {
+        justify-content: flex-end;
+        align-items: flex-end;
+        text-align: right;
     }
 }
 
