--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -495,3 +495,37 @@
         opacity: 0.5;
     }
 }
+
+
+// PhotoSwipe
+.vp-pswp {
+    z-index: 100000;
+
+    .pswp__caption {
+        background-color: rgba(0, 0, 0, 0.75);
+
+        > div {
+            max-width: 600px;
+            color: #fff;
+            font-size: 12px;
+        }
+
+        a {
+            color: inherit;
+
+            &:hover {
+                opacity: 0.8;
+            }
+        }
+        .nk-portfolio__item-meta-title {
+            color: inherit;
+            margin-top: 0;
+            margin-bottom: 3px;
+            font-size: 14px;
+
+            a {
+                text-decoration: none;
+            }
+        }
+    }
+}
