--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -1,3 +1,9 @@
+/*!
+ * Name    : Visual Portfolio
+ * Version : 1.0.0
+ * Author  : _nK https://nkdev.info
+ */
+
 .vp-portfolio {
     margin-top: 40px;
     margin-bottom: 40px;
