increased size for meta icon

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -223,6 +223,9 @@
         .vp-portfolio__item-meta-date {
             font-size: 12px;
         }
+        .vp-portfolio__item-meta-icon {
+            font-size: 30px;
+        }
     }
 
     // align
@@ -306,6 +309,9 @@
         }
         .vp-portfolio__item-meta-date {
             font-size: 12px;
+        }
+        .vp-portfolio__item-meta-icon {
+            font-size: 30px;
         }
     }
 
