--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -118,6 +118,7 @@
         height: 100%;
         object-fit: cover;
         object-position: 50% 50%;
+        font-family: 'object-fit: cover; object-position: 50% 50%;';
     }
 }
 
