--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -22,11 +22,15 @@
 }
 
 .vp-portfolio__items-wrap,
+.vp-portfolio__filter-wrap,
+.vp-portfolio__pagination-wrap,
 .vp-portfolio__item-wrap {
     position: relative;
     overflow: hidden;
 }
-.vp-portfolio__items-wrap {
+.vp-portfolio__items-wrap,
+.vp-portfolio__filter-wrap,
+.vp-portfolio__pagination-wrap {
     opacity: 0;
     visibility: hidden;
     transition: .7s opacity, .7s visibility;
@@ -137,8 +141,8 @@
     min-height: initial;
 
     .vp-portfolio__items-wrap,
-    .vp-filter,
-    .vp-pagination {
+    .vp-portfolio__filter-wrap,
+    .vp-portfolio__pagination-wrap {
         opacity: 1;
         visibility: visible;
     }
@@ -147,21 +151,6 @@
         visibility: hidden;
         animation: none;
     }
-}
-
-// Filter
-.vp-filter {
-    position: relative;
-    opacity: 0;
-    visibility: hidden;
-    transition: .7s opacity, .7s visibility;
-}
-
-// Pagination
-.vp-pagination {
-    opacity: 0;
-    visibility: hidden;
-    transition: .7s opacity, .7s visibility;
 }
 
 // PhotoSwipe
