--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -184,4 +184,10 @@
             }
         }
     }
+
+    // fix for default theme styles
+    .pswp__button:hover,
+    .pswp__button:focus {
+        background: none;
+    }
 }
