--- a/src/templates/items-list/items-style/fade/style.scss
+++ b/src/templates/items-list/items-style/fade/style.scss
@@ -2,6 +2,11 @@
  * Fade items style
  */
 .vp-portfolio__items-style-fade {
+    .vp-portfolio__item a {
+        outline: none;
+        box-shadow: none;
+    }
+
     .vp-portfolio__item-overlay {
         position: absolute;
         display: flex;
