--- a/src/templates/items-list/pagination/style.scss
+++ b/src/templates/items-list/pagination/style.scss
@@ -10,7 +10,7 @@
     padding: 0;
     margin-top: 17px;
 
-    a {
+    .vp-pagination__item a {
         outline: none;
         box-shadow: none;
     }
@@ -33,7 +33,7 @@
         > * {
             display: block;
             text-decoration: none;
-            padding: 8px 14px;
+            padding: 8px 16px;
             min-width: 40px;
             line-height: 1.4;
             color: inherit;
@@ -48,15 +48,9 @@
 
         &.vp-pagination__item-active > * {
             cursor: default;
-            border-color: #0085ba;
-            background-color: #0082b7;
+            border-color: #007acc;
+            background-color: #007acc;
             color: #fff;
-        }
-
-        &.vp-pagination__item-prev > *,
-        &.vp-pagination__item-next > * {
-            position: relative;
-            font-family: monospace;
         }
     }
 
