--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -49,16 +49,18 @@
 }
 
 // Preloader
+.vp-portfolio__preloader-wrap {
+    visibility: visible;
+    opacity: 1;
+    transition: .7s opacity, .7s visibility;
+}
 .vp-portfolio__preloader {
     position: absolute;
-    visibility: visible;
     left: 50%;
     margin-left: -11px;
     width: 23px;
     height: 24px;
     margin-top: 45px;
-    opacity: 0.5;
-    transition: .7s opacity, .7s visibility;
     animation: vp-preloader 2s linear infinite;
 
     span {
@@ -146,10 +148,13 @@
         opacity: 1;
         visibility: visible;
     }
-    .vp-portfolio__preloader {
+    .vp-portfolio__preloader-wrap {
         opacity: 0;
         visibility: hidden;
-        animation: none;
+
+        .vp-portfolio__preloader {
+            animation: none;
+        }
     }
 }
 
