--- a/src/assets/admin/css/style.scss
+++ b/src/assets/admin/css/style.scss
@@ -444,9 +444,10 @@ input[type="range"].vp-rangeslider:focus + .rangeslider .rangeslider__handle {
     margin-right: -12px;
     margin-top: 20px;
 
-    .vp-portfolio {
-        margin-top: 0;
-        margin-bottom: 0;
+    iframe {
+        width: 100%;
+        min-height: 120px;
+        transition: height .3s;
     }
 }
 
