slightly changed categories links style

--- a/src/templates/items-list/items-style/style.scss
+++ b/src/templates/items-list/items-style/style.scss
@@ -48,14 +48,14 @@
 
                 a {
                     display: block;
-                    padding: 5px 10px;
-                    background-color: #4a4a4a;
+                    padding: 4px 15px;
+                    background-color: #3c3c3c;
                     color: #fff;
                     text-decoration: none;
                     transition: .2s background-color;
 
                     &:hover {
-                        background-color: #373737;
+                        background-color: #545454;
                     }
                 }
             }
