--- a/src/templates/items-list/items-style/fade/style.scss
+++ b/src/templates/items-list/items-style/fade/style.scss
@@ -63,8 +63,8 @@
             .vp-portfolio__item-meta-category {
                 display: block;
                 margin: 0 5px;
-                padding: 5px 10px;
-                background-color: #4a4a4a;
+                padding: 4px 15px;
+                background-color: #3c3c3c;
                 color: #fff;
             }
         }
