changed titles weight removed all !important style tags (that was needed for admin style)

--- a/src/templates/items-list/items-style/emerge/style.scss
+++ b/src/templates/items-list/items-style/emerge/style.scss
@@ -41,9 +41,9 @@
 
         .nk-portfolio__item-meta-title {
             color: inherit;
-            font-weight: 500;
-            font-size: 16px !important;
-            padding: 0 !important;
+            font-weight: 600;
+            font-size: 16px;
+            padding: 0;
         }
         .vp-portfolio__item-meta-date {
             font-size: 11px;
