--- a/src/templates/items-list/items-style/fade/style.scss
+++ b/src/templates/items-list/items-style/fade/style.scss
@@ -36,9 +36,9 @@
 
         .nk-portfolio__item-meta-title {
             color: inherit;
-            font-weight: 500;
-            font-size: 16px !important;
-            padding: 0 !important;
+            font-weight: 600;
+            font-size: 16px;
+            padding: 0;
         }
         .vp-portfolio__item-meta-date {
             font-size: 11px;
@@ -47,7 +47,7 @@
             font-size: 30px;
 
             + * {
-                margin-top: 15px !important;
+                margin-top: 15px;
             }
         }
         .vp-portfolio__item-meta-categories {
