--- a/src/templates/items-list/items-style/style.scss
+++ b/src/templates/items-list/items-style/style.scss
@@ -16,9 +16,9 @@
         }
 
         .nk-portfolio__item-meta-title {
-            font-weight: 500;
-            font-size: 16px !important;
-            padding: 0 !important;
+            font-weight: 600;
+            font-size: 16px;
+            padding: 0;
 
             a {
                 color: inherit;
