--- a/src/templates/items-list/items-style/emerge/style.scss
+++ b/src/templates/items-list/items-style/emerge/style.scss
@@ -41,12 +41,9 @@
 
         .nk-portfolio__item-meta-title {
             color: inherit;
-            font-weight: 600;
-            font-size: 16px;
-            padding: 0;
         }
         .vp-portfolio__item-meta-date {
-            font-size: 11px;
+            font-size: 0.85em;
         }
         .vp-portfolio__item-meta-categories {
             display: flex;
