--- a/src/templates/items-list/items-style/style.scss
+++ b/src/templates/items-list/items-style/style.scss
@@ -16,10 +16,6 @@
         }
 
         .nk-portfolio__item-meta-title {
-            font-weight: 600;
-            font-size: 16px;
-            padding: 0;
-
             a {
                 color: inherit;
                 text-decoration: none;
@@ -30,7 +26,7 @@
             }
         }
         .vp-portfolio__item-meta-date {
-            font-size: 11px;
+            font-size: 0.85em;
         }
         .vp-portfolio__item-meta-categories {
             position: absolute;
