--- a/src/templates/items-list/items-style/emerge/style.scss
+++ b/src/templates/items-list/items-style/emerge/style.scss
@@ -24,6 +24,7 @@
         transform: translateY(0);
     }
 
+    // meta
     .vp-portfolio__item-meta {
 
         * + * {
@@ -38,36 +39,40 @@
                 opacity: 0.8;
             }
         }
+    }
+    .nk-portfolio__item-meta-title {
+        color: inherit;
+        font-size: 1.3em;
+        margin-bottom: 0;
+    }
+    .vp-portfolio__item-meta-date {
+        font-size: 0.85em;
+    }
+    .vp-portfolio__item-meta-categories {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+        list-style-type: none;
+        left: 0;
+        bottom: 100%;
+        margin-left: 0;
+        margin-right: 0;
+        margin-bottom: 0;
+        padding: 0;
 
-        .nk-portfolio__item-meta-title {
-            color: inherit;
-        }
-        .vp-portfolio__item-meta-date {
-            font-size: 0.85em;
-        }
-        .vp-portfolio__item-meta-categories {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: flex-start;
-            list-style-type: none;
-            left: 0;
-            bottom: 100%;
-            margin-left: 0;
-            margin-right: 0;
-            margin-bottom: 0;
+        .vp-portfolio__item-meta-category {
+            margin: 0;
             padding: 0;
-
-            .vp-portfolio__item-meta-category {
-                margin: 0;
-                padding: 0;
-            }
-            .vp-portfolio__item-meta-category a:after {
-                content: ', ';
-            }
-            .vp-portfolio__item-meta-category:last-of-type a:after {
-                content: none;
-            }
         }
+        .vp-portfolio__item-meta-category a:after {
+            content: ', ';
+        }
+        .vp-portfolio__item-meta-category:last-of-type a:after {
+            content: none;
+        }
+    }
+    .vp-portfolio__item-meta-excerpt {
+        opacity: 0.8;
     }
 
     // align
