--- a/src/templates/items-list/items-style/style.scss
+++ b/src/templates/items-list/items-style/style.scss
@@ -7,6 +7,7 @@
         box-shadow: none;
     }
 
+    // meta
     .vp-portfolio__item-meta {
         position: relative;
         padding: 10px 15px;
@@ -14,48 +15,53 @@
         * + * {
             margin-top: 4px;
         }
+    }
+    .nk-portfolio__item-meta-title {
+        font-size: 1.3em;
+        margin-bottom: 0;
 
-        .nk-portfolio__item-meta-title {
+        a {
+            color: inherit;
+            text-decoration: none;
+
+            &:hover {
+                color: #007acc;
+            }
+        }
+    }
+    .vp-portfolio__item-meta-date {
+        font-size: 0.85em;
+    }
+    .vp-portfolio__item-meta-categories {
+        position: absolute;
+        display: flex;
+        flex-wrap: wrap;
+        list-style-type: none;
+        left: 0;
+        bottom: 100%;
+        margin: 0;
+        padding: 15px 10px;
+
+        .vp-portfolio__item-meta-category {
+            margin: 0 5px;
+            padding: 0;
+
             a {
-                color: inherit;
+                display: block;
+                padding: 4px 15px;
+                background-color: #3c3c3c;
+                color: #fff;
                 text-decoration: none;
+                transition: .2s background-color;
 
                 &:hover {
-                    color: #007acc;
+                    background-color: #545454;
                 }
             }
         }
-        .vp-portfolio__item-meta-date {
-            font-size: 0.85em;
-        }
-        .vp-portfolio__item-meta-categories {
-            position: absolute;
-            display: flex;
-            flex-wrap: wrap;
-            list-style-type: none;
-            left: 0;
-            bottom: 100%;
-            margin: 0;
-            padding: 15px 10px;
-
-            .vp-portfolio__item-meta-category {
-                margin: 0 5px;
-                padding: 0;
-
-                a {
-                    display: block;
-                    padding: 4px 15px;
-                    background-color: #3c3c3c;
-                    color: #fff;
-                    text-decoration: none;
-                    transition: .2s background-color;
-
-                    &:hover {
-                        background-color: #545454;
-                    }
-                }
-            }
-        }
+    }
+    .vp-portfolio__item-meta-excerpt {
+        opacity: 0.8;
     }
 
     // align
