--- a/src/assets/admin/css/style.scss
+++ b/src/assets/admin/css/style.scss
@@ -1,7 +1,7 @@
 /*!
  * Name    : Visual Portfolio
- * Version : 1.0.0
- * Author  : _nK https://nkdev.info
+ * Version : 1.1.0
+ * Author  : nK https://nkdev.info
  */
 
 /**
