--- a/src/templates/items-list/items-style/emerge/style.scss
+++ b/src/templates/items-list/items-style/emerge/style.scss
@@ -9,19 +9,52 @@
 
     .vp-portfolio__item-overlay {
         position: absolute;
-        padding: 15px;
+        padding: 15px 32px;
         bottom: 0;
         left: 0;
         width: 100%;
         max-height: 50%;
         background-color: #fff;
         color: #000;
-        transform: translateY(100%);
-        transition: .2s transform;
+
+        &:before {
+            content: '';
+            display: block;
+            position: absolute;
+            top: 0;
+            left: -20px;
+            right: 0;
+            height: 600%;
+            background-color: inherit;
+            z-index: -1;
+        }
     }
 
-    .vp-portfolio__item:hover .vp-portfolio__item-overlay {
-        transform: translateY(0);
+    // Transitions
+    .vp-portfolio__item-img img {
+        transition: transform 2s cubic-bezier(0.08, 0.43, 0.24, 1);
+    }
+    .vp-portfolio__item-overlay {
+        transform: translateY(100%);
+        transition: .5s transform cubic-bezier(0.07, 0.72, 0.24, 1);
+
+        &:before {
+            transform: rotate(0deg);
+            transform-origin: 100% 0;
+            transition: .5s transform ease;
+        }
+    }
+
+    .vp-portfolio__item:hover {
+        .vp-portfolio__item-img img {
+            transform: scale(1.1);
+        }
+        .vp-portfolio__item-overlay {
+            transform: translateY(0);
+            &:before {
+                transform: rotate(3deg);
+            }
+        }
     }
 
     // meta
