--- a/src/templates/items-list/items-style/fade/style.scss
+++ b/src/templates/items-list/items-style/fade/style.scss
@@ -9,12 +9,6 @@
 
     .vp-portfolio__item-overlay {
         position: absolute;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        text-decoration: none;
         background-color: rgba(0, 0, 0, 0.85);
         color: #fff;
         top: 0;
@@ -22,15 +16,45 @@
         right: 0;
         bottom: 0;
         padding: 20px;
-        opacity: 0;
-        transition: .3s opacity;
+        text-decoration: none;
     }
-    & .vp-portfolio__item:hover .vp-portfolio__item-overlay {
-        opacity: 1;
+
+    // Transitions
+    .vp-portfolio__item-overlay {
+        opacity: 0;
+        transition: opacity 1s cubic-bezier(0.07, 0.72, 0.24, 1);
+    }
+    .vp-portfolio__item-img img {
+        transition: transform 2s cubic-bezier(0.08, 0.43, 0.24, 1);
+    }
+    .vp-portfolio__item-meta {
+        transform: scale(0.8);
+        transition: transform 1s cubic-bezier(0.07, 0.72, 0.24, 1), opacity 1s cubic-bezier(0.07, 0.72, 0.24, 1);
+    }
+    & .vp-portfolio__item:hover {
+        .vp-portfolio__item-overlay {
+            opacity: 1;
+        }
+        .vp-portfolio__item-meta {
+            transform: scale(1);
+        }
+        .vp-portfolio__item-img img {
+            transform: scale(1.1);
+        }
     }
 
     // meta
     .vp-portfolio__item-meta {
+        display: flex;
+        position: relative;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+
         * + * {
             margin-top: 4px;
         }
@@ -58,7 +82,7 @@
         left: 0;
         bottom: 0;
         margin: 0;
-        padding: 15px 10px;
+        padding: 0;
 
         .vp-portfolio__item-meta-category {
             display: block;
