--- a/src/templates/items-list/items-style/style.scss
+++ b/src/templates/items-list/items-style/style.scss
@@ -8,6 +8,9 @@
     }
 
     // Transitions
+    .vp-portfolio__item-img {
+        overflow: hidden;
+    }
     .vp-portfolio__item-img img {
         transition: transform 2s cubic-bezier(0.08, 0.43, 0.24, 1);
     }
