changed popup galery preloader position

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -212,4 +212,11 @@
             }
         }
     }
+
+    .pswp__preloader {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        z-index: 1;
+    }
 }
