--- a/src/templates/items-list/filter/style.scss
+++ b/src/templates/items-list/filter/style.scss
@@ -52,5 +52,11 @@
             background-color: #007acc;
             color: #fff;
         }
+
+        .vp-filter__item-count {
+            float: right;
+            font-size: 60%;
+            margin-left: 8px;
+        }
     }
 }
