added support for oEmbed videos

--- a/src/assets/admin/css/style.scss
+++ b/src/assets/admin/css/style.scss
@@ -352,6 +352,50 @@ input[type="range"].vp-rangeslider:focus + .rangeslider .rangeslider__handle {
     }
 }
 
+/**
+ * oEmbed preview
+ */
+.vp-oembed-preview {
+    position: relative;
+    width: 100%;
+    padding-top: 56.25%;
+    background-color: #f1f1f1;
+    border: 1px solid #e8e8e8;
+    color: #a2a2a2;
+
+    &:after {
+        content: '\f126';
+        display: block;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 20px;
+        height: 20px;
+        font-size: 20px;
+        margin-left: -10px;
+        margin-top: -10px;
+        line-height: 1;
+        font-family: dashicons;
+        text-decoration: inherit;
+        font-weight: 400;
+        font-style: normal;
+        vertical-align: top;
+        text-align: center;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+        z-index: 1;
+    }
+
+    > iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 2;
+    }
+}
+
 
 /**
  * Portfolio Post Type
